# tianfeng-pro

./: .gitignore  CONSTITUTION-REF.txt  README.md  digested-knowledge.json  federation-memory-standard-v1.md  gene-quality-report.json  memory-constitution-v2.md  node-capabilities.json  setup.py  task-history.json  task-market.json  tianfeng-install.sh
ai-box-engine/: Cargo.toml
ai-box-engine/src/: lib.rs
darwin/: DarwinModelfile
docs/: 3month-roadmap-surpass-claude-codex.md  big3-tools-analysis.md  code-brain-2035-architecture.md  cursor-codex-analysis.md  tianfeng-v5-product-manual.md
engines/: constitution_rules_ext.py
genes/: alert-connectivity-20260713.json  alert-dishu-offline-20260714-005548.json  alert-dishu-offline.json  alert-dixu-multipath-20260718.json  alert-dizhu-1783972739.json  alert-meta-1783956309.json  alert-tianji-offline-1783929100.json  alert-tianyi-offline-1784319849.json  alert-地枢-offline.json  alert-地枢.json  alert-天怿.json  cron-health-7self-20260717-1400.json  fed-health-20260714-0644.json  federation-perception-1784301301.json  health-connector.json  note-tianyi-1783972739.json  patrol-1783958202.json  patrol-20260713-143623.json  patrol-20260714-0553.json  patrol-alert-20260713-2211.json  patrol-alert-dishu-20260713.json  patrol-connectivity-20260717.json  perception-1783972739.json  perception-20260714-0407.json  perception-20260714-0628.json  perception-fed-health-1784319849.json  perception-patrol.json  ping-20260717.md  seven-self-20260713-231046.json  seven-self-20260714-0206.json  seven-self-20260714-061103.json  (+3 more)
(+337 files in other folders)
